Regression fixed: Autoscrolling on vertical scrollbar works.

Before landing the cl below scrollChain used to get re-computed whenever
needed, including when it wasn't computed for a GSB and needed to get
computed for its following GSU. With the change below now it gets
computed only for GSB events and if it is empty while handling a GSU,
the GSU gets ignored.
https://codereview.chromium.org/2907053004

With this cl GSB events in case of touchpad or auto scrolling are not
handled by scrollbars and the scrollchain is computed while handling
them. Then their following GSU events won't get suppressed.

All/ParameterizedWebFrameTest.scrollbarIsNotHandlingTouchpadScroll/*

Bug: 746922
Test: fast/events/autoscroll-over-scrollbar.html,
Change-Id: I5620d64044afb3fd0f596267be141f9751626827
Reviewed-on: https://chromium-review.googlesource.com/598999
Reviewed-by: Rick Byers <rbyers@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Sahel Sharifymoghaddam <sahel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492095}
Former-commit-id: a7bd4b63f512849d1107eb4c319835e6fffbd938